deployment/user-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-portal-ingress
  namespace: user-portal
  annotations: {}
spec:
  ingressClassName: cilium
  rules:
  - host: portal.basphere.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: user-portal-backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-portal-frontend-service
            port:
              number: 80
